# hypsibius

./: LICENSE  README.md  hypsibius.cabal
data/scales/: 12tet.hps  19tet.hps  bohlen-pierce.hps  just-intonation.hps
src/: Draw.hs  Event.hs  Formats.hs  Main.hs  State.hs
src/Formats/: Scale.hs
src/Hypsibius/: Data.hs  Draw.hs  Event.hs  Formats.hs  State.hs
src/Hypsibius/Formats/: Scale.hs
