name:             hypsibius
version:          0.1.0.0
-- synopsis:
-- description:
license:          OtherLicense
license-file:     LICENSE
author:           Getty Ritter <gettyritter@gmail.com>
maintainer:       Getty Ritter <gettyritter@gmail.com>
copyright:        ©2016 Getty Ritter
category:         Music
build-type:       Simple
cabal-version:    >= 1.12

executable hypsibius
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Hypsibius.Data
                     , Hypsibius.Draw
                     , Hypsibius.Event
                     , Hypsibius.Formats
                     , Hypsibius.Formats.Scale
                     , Hypsibius.State
  default-extensions:  OverloadedStrings,
                       ScopedTypeVariables
  ghc-options:         -Wall -threaded
  build-depends:       base >=4.7 && <4.9
                     , brick
                     , lens-family-core
                     , text
                     , containers
                     , vty
                     , data-default
  default-language:    Haskell2010
